engine/baml-lib/baml/tests/validation_files/generators/error.baml
generator default {
  language python
  o o
}

// error: Property not known: "o". Did you mean one of these: "language", "project_root", "test_command", "install_command"?
//   -->  generators/error.baml:3
//    | 
//  2 |   language python
//  3 |   o o
//    | 
